assets/css/style.css
.social ul li a {
    display: flex;
    justify-content: center;
    align-items: center;
}
.slides {display: flex;}
.digital-outsourcing-agency .banner .left-side h1 {color: #A4D6E8;}
.cta-button, input[type="submit"] {background: #A4D6E8;}
footer#colophon {
    background: url(../images/agency-banner.png);
    background-size: 100% !important;
    background-position-y: 100% !important;
}
footer#colophon .ftr-locations ul{justify-content: center;}
.digital-outsourcing-agency .clutch-pg .banner .item {
    align-items: center;
}
.digital-outsourcing-agency .services-main .item, .ppc-testimonials .slides {
    display: grid;
}

